--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "angular-form-child-component",
-  "version": "2.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --hmr",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^18.0.4",
-    "@angular/common": "^18.0.4",
-    "@angular/compiler": "^18.0.4",
-    "@angular/core": "^18.0.4",
-    "@angular/forms": "^18.0.4",
-    "@angular/platform-browser": "^18.0.4",
-    "@angular/platform-browser-dynamic": "^18.0.4",
-    "@angular/router": "^18.0.4",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.7"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.5",
-    "@angular-eslint/builder": "18.0.1",
-    "@angular-eslint/eslint-plugin": "18.0.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.1",
-    "@angular-eslint/schematics": "18.0.1",
-    "@angular-eslint/template-parser": "18.0.1",
-    "@angular/cli": "~18.0.5",
-    "@angular/compiler-cli": "^18.0.4",
-    "@playwright/test": "^1.45.0",
-    "@types/node": "^20.14.9",
-    "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "eslint": "^8.57.0",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
-    "prettier": "3.3.2",
-    "typescript": "~5.4.5"
-  }
+	"name": "angular-form-child-component",
+	"version": "2.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve --hmr",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^18.0.4",
+		"@angular/common": "^18.0.4",
+		"@angular/compiler": "^18.0.4",
+		"@angular/core": "^18.0.4",
+		"@angular/forms": "^18.0.4",
+		"@angular/platform-browser": "^18.0.4",
+		"@angular/platform-browser-dynamic": "^18.0.4",
+		"@angular/router": "^18.0.4",
+		"tailwindcss": "^3.4.4",
+		"rxjs": "~7.8.0",
+		"tslib": "^2.3.0",
+		"zone.js": "~0.14.7"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^18.0.5",
+		"@angular-eslint/builder": "18.0.1",
+		"@angular-eslint/eslint-plugin": "18.0.1",
+		"@angular-eslint/eslint-plugin-template": "18.0.1",
+		"@angular-eslint/schematics": "18.0.1",
+		"@angular-eslint/template-parser": "18.0.1",
+		"@angular/cli": "~18.0.5",
+		"@angular/compiler-cli": "^18.0.4",
+		"@playwright/test": "^1.45.0",
+		"@types/node": "^20.14.9",
+		"@types/jest": "^29.5.12",
+		"@typescript-eslint/eslint-plugin": "^7.14.1",
+		"@typescript-eslint/parser": "^7.14.1",
+		"eslint": "^8.57.0",
+		"jest": "^29.6.2",
+		"jest-environment-jsdom": "^29.6.2",
+		"prettier": "3.3.2",
+		"typescript": "~5.4.5"
+	}
 }
